--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.16",
+    "nodemailer": "^6.4.8",
     "normalize-url": "^5.0.0"
   },
   "devDependencies": {
